Fixed login pictures

--- a/templates/mainsite/analytics.html
+++ b/templates/mainsite/analytics.html
@@ -169,7 +169,7 @@
                             <div class="col-md-4">
                                 <div class="card text-center">
                                     <div class="card-header" style="border-top-right-radius: 15px; border-top-left-radius: 15px;">
-                                        Best Performed Unit Lesson
+                                        Best Performed Unit
                                     </div>
                                     <div class="card-body" style="min-height:100px">
                                         <h5 class="card-title">{{best_unit}}</h5>
@@ -180,7 +180,7 @@
                             <div class="col-md-4">
                                 <div class="card text-center">
                                     <div class="card-header" style="border-top-right-radius: 15px; border-top-left-radius: 15px;">
-                                        Worst Performed Unit Lesson
+                                        Worst Performed Unit
                                     </div>
                                     <div class="card-body" style="min-height:100px">
                                         <h5 class="card-title">{{worst_unit}}</h5>
