--- a/static/signin.css
+++ b/static/signin.css
@@ -39,9 +39,9 @@ background-color: #0056b3;
 }
 
 .gif-background {
-  height: 55vh;
-  width:520px;
-  margin-left: 40px;
+  height: 35rem;
+  width:40rem;
+  margin-left: 1rem;
   position: fixed;
   left: 0;
   top: 70%;
@@ -49,8 +49,8 @@ background-color: #0056b3;
 }
 
 .gif-background2 {
-  height: 65vh;
-  width: 375px;
+  height: 40rem;
+  width: 25rem;
   margin-right: 140px;
   position: fixed;
   right: 0;
@@ -73,19 +73,18 @@ background-color: #0056b3;
 }
 
 .gif-background4 {
-  height: 25vh;
-  width: 580px;
-  margin-left: 1px;
+  height: 15rem;
+  width: 40rem;
   position: fixed;
   left: 0;
   top: 35%;
   transform: translateY(-50%);
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 1800px) {
   .gif-background,
   .gif-background2,
-  .gif-background3 {
+  .gif-background4 {
     display: none;
   }
 }
