--- a/templates/login/signin.html
+++ b/templates/login/signin.html
@@ -10,12 +10,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<style>
+</style>
 </head>
 <body>
-<img class="gif-background" src="{% static 'Big Logo.png' %}" alt="GIF" class="gif">
-<img class="gif-background2" src="{% static '6 Tags on right.png' %}" alt="GIF" class="gif">
-<img class="gif-background4" src="{% static 'Big Website Title.png' %}" alt="GIF" class="gif">
-<div class="container mt-5">
+<img class="gif-background" src="{% static 'Big Logo.png' %}" alt="GIF">
+<img class="gif-background2" src="{% static '6 Tags on right.png' %}" alt="GIF" >
+<img class="gif-background4" src="{% static 'Big Website Title.png' %}" alt="GIF">
+<div class="container mt-0">
   <div class="row justify-content-center">
     <div class="col-md-6">
       <div class="card" id="login-card">
