--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -20,7 +20,7 @@
     background-size: cover;
   }
 
-  .registration-container { max-width: 600px; margin: 20px auto; background: white; padding: 20px; border-radius: 30px; box-shadow: 10px 10px 5px 5px; background-color: #f2edcb; }
+  .registration-container { max-width: 45rem; margin: 0.5rem auto; background: white; padding: 1.5rem; border-radius: 30px; box-shadow: 10px 10px 5px 5px; background-color: #f2edcb; }
   
   .registration-container h1 { text-align: center; color: #333; }
   
