--- a/templates/mainsite/media.html
+++ b/templates/mainsite/media.html
@@ -15,8 +15,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 600px; /* Adjusted for visibility of smaller cube */
-      perspective: 1200px; /* Slightly reduced for better 3D effect */
+      height: 600px;
+      perspective: 1200px;
   }
 
   .header {
@@ -79,14 +79,14 @@
             </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">Settings</a>
+          <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">{% translate 'Settings' %}</a>
         </li>
       </ul>
       <span class="navbar-text">
         <a href="#" id='discordHref' class="settings-link nb-item"  class="settings-link nb-item" style="font-size:26px; margin-right: 2em;" data-toggle="modal" data-target="#discordModal">
           <i id="discordLogo" class="fab fa-discord"></i>
       </a>
-        <a href="/signout" class="settings-link nb-item" style="font-size:22px">Logout</a>
+        <a href="/signout" class="settings-link nb-item" style="font-size:22px">{% translate 'Logout' %}</a>
       </span>
     </div>
   </nav>
@@ -114,7 +114,7 @@
                   <center>
                     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/67waO0NR8HTySxtB7wfMBZ?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                   </center>
-                  <p class="text-center"><small><b>Explore the profound depths of Fado with this curated playlist.</b></small></p>                    
+                  <p class="text-center"><small><b>{% translate 'Explore the profound depths of Fado with this curated playlist.' %}</b></small></p>                    
                   <p class="card-text">
                     {% blocktranslate %}
                     Beyond Fado, Portugal is known for its folk music, which varies significantly from region to region. In the North, you find the upbeat tunes of
@@ -140,11 +140,11 @@
                   <div class="row">
                       <div class="col-md-6">
                           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4kS6pDC5qnyxBdbaSUhKAo?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                          <p class="text-center"><small><b>A vibrant mix of modern Portuguese pop music.</b></small></p>                    
+                          <p class="text-center"><small><b>{% translate 'A vibrant mix of modern Portuguese pop music.' %}</b></small></p>                    
                       </div>
                       <div class="col-md-6">
                           <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/4GkQhzoeVyzKzdgGv9syUi?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-                          <p class="text-center"><small><b>An assortment of a variety of Portuguese music.</b></small></p>
+                          <p class="text-center"><small><b>{% translate 'An assortment of a variety of Portuguese music.' %}</b></small></p>
                       </div>
                   </div>
                 </div>
