--- a/templates/mainsite/discord_modal.html
+++ b/templates/mainsite/discord_modal.html
@@ -10,7 +10,7 @@
             </div>
             <div class="modal-body">
                 Join our discord to interact with the community
-                <a href="https://discord.gg/placeholder" target="_blank">https://discord.gg/placeholder</a>
+                <a href="https://discord.gg/DzfEKTxc" target="_blank">https://discord.gg/DzfEKTxc</a>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
