Added bunch of data

--- a/templates/mainsite/quiz_1.html
+++ b/templates/mainsite/quiz_1.html
@@ -76,7 +76,7 @@
       </div>
       <hr>
       <div class="header-with-button d-flex justify-content-center align-items-center">
-        <h2 class="text-center mb-4 flex-grow-1">{{question_text}}</h2>
+        <h2 class="text-center mb-4 flex-grow-1">Select <b>'{{question_text}}'</b> from the following</h2>
         <button id="clue-button" class="clue-button ml-2" data-toggle="tooltip" data-placement="top" title="Hint">
           <i class="fas fa-eye" id="toggleClue"></i> <!-- Font Awesome eye icon -->
           <div style="font-size:12px">Clue</div>
