--- a/templates/mainsite/quiz_5.html
+++ b/templates/mainsite/quiz_5.html
@@ -194,12 +194,13 @@
       <div class="mcq-container">
         <form>
         {% csrf_token %}
-        <h1 class="text-center mb-4">Arrange in sequence</h1>
-        <ul id="sortable" class="horizontal-list" style="margin-left: 20px; margin-top: 50px;">
+        <h2 class="text-center mb-4">Arrange to form a sentence</h2><center><b>Translation:</b> {{question_text}}</center>
+        <center><ul id="sortable" class="horizontal-list" style="margin-left: 20px; margin-top: 50px;">
             {% for word in jumbled_answer %}
                 <li class="ui-state-default"><b>{{ word }}</b></li>
             {% endfor %}
         </ul>
+        </center>
         <div class="text-center" style="margin-top: 30px;"> <!-- Adjust top margin as needed -->
             <i id='correctTick' class="far fa-check-circle correctTick" style="display:none"></i>
             <i id='incorrectTick' class="far fa-times-circle incorrectTick" style="display:none"></i>
