--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -302,12 +302,12 @@
                 response.quizzes.forEach(function(quiz) {
                     var quizItem = `<li class="list-group-item d-flex justify-content-between align-items-center">
                         <div>
-                            <b>Quiz ${quiz.number}</b>: <strong>${quiz.questions_answered}</strong> out of <strong>${quiz.total_questions}</strong> questions answered
+                            <b>Quiz ${quiz.number}</b>: <strong>${quiz.questions_answered}</strong> out of <strong>${quiz.total_questions}</strong> questions answered. (Completed <b>${quiz.times_completed}</b> times)
                             <div class="progress" style="height: 20px; margin-top: 10px; width: 80%;">
                                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: ${quiz.progress_percent}%;" aria-valuenow="${quiz.progress_percent}" aria-valuemin="0" aria-valuemax="100"><div style="margin-left: 10px">${quiz.progress_percent}%</div></div>
                             </div>
                         </div>
-                        <a href="/quiz/${unitId}/${quiz.number}" class="btn btn-primary">Access Quiz</a>
+                        <a href="/quiz/${unitId}/${quiz.number}" class="btn btn-primary" style="${quiz.total_questions !== 5 ? 'pointer-events: none; color: gray;' : ''}">Access Quiz</a>
                     </li>`;
                     quizList.append(quizItem);
                 });
