--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -158,7 +158,7 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content" style="background-color: #e5db93;">
             <div class="modal-header">
-                <h5 class="modal-title" id="quizModalLabel"><b>Quiz List</b></h5>
+                <h5 class="modal-title" id="quizModalLabel"><b>Quiz List</b> (recommended to do in sequence)</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
                 </button>
