--- a/templates/mainsite/analytics.html
+++ b/templates/mainsite/analytics.html
@@ -95,7 +95,7 @@
               <div class="dropdown-menu" aria-labelledby="cultureDropdown">
                 <a class="dropdown-item" href="/architecture">Architecture</a>
                 <a class="dropdown-item" href="/festivals">Festivals</a>
-                <a class="dropdown-item" href="/media">Media</a>
+                <a class="dropdown-item" href="/media">Music</a>
               </div>
           </li>
           <li class="nav-item">
