--- a/templates/mainsite/diacritics.html
+++ b/templates/mainsite/diacritics.html
@@ -132,8 +132,8 @@
             <h2 class="sub-heading"><strong>What are Diacritics?</strong></h2>
             <p>Diacritics are marks placed above or below a letter to alter its sound. In Portuguese, diacritics are used to indicate stress, 
                 vowel height, nasalization, and to differentiate homographs. 
-                Understanding these can greatly improve your pronunciation and comprehension of Portuguese. Below, we shall go over the most commonly used diacritics in Portuguese,
-                as well as how they're used.
+                Understanding these can greatly improve your pronunciation and comprehension of Portuguese. Below, are some commonly used diacritics in Portuguese,
+                along with their example usages.
             </p>
         </div>
         <section>
