--- a/templates/mainsite/media.html
+++ b/templates/mainsite/media.html
@@ -50,36 +50,36 @@
       <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item active">
           <a class="nav-link nb-item" href="/home">
-            {% translate 'Home' %} 
+            Home 
           <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/vocab">
-            {% translate 'Vocabulary' %} 
+            Vocabulary 
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/analytics">
-            {% translate 'Analytics' %} 
+            Analytics 
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/diacritics">
-            {% translate 'Diacritics' %} 
+            Diacritics 
           </a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link active-tab dropdown-toggle nb-item" style="color: rgb(232, 255, 255);"  href="#" id="cultureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {% translate 'Culture' %} 
+              Culture 
             </a>
             <div class="dropdown-menu" aria-labelledby="cultureDropdown">
-              <a class="dropdown-item" href="/architecture">{% translate 'Architecture' %} </a>
-              <a class="dropdown-item" href="/festivals">{% translate 'Festivals' %} </a>
-              <a class="dropdown-item" href="/media">{% translate 'Music' %} </a>
+              <a class="dropdown-item" href="/architecture">Architecture</a>
+              <a class="dropdown-item" href="/festivals">Festivals</a>
+              <a class="dropdown-item" href="/media">Music</a>
             </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">{% translate 'Settings' %}</a>
+          <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">Settings</a>
         </li>
       </ul>
       <span class="navbar-text">
