--- a/templates/mainsite/vocab.html
+++ b/templates/mainsite/vocab.html
@@ -196,7 +196,7 @@
               <div class="dropdown-menu" aria-labelledby="cultureDropdown">
                 <a class="dropdown-item" href="/architecture">Architecture</a>
                 <a class="dropdown-item" href="/festivals">Festivals</a>
-                <a class="dropdown-item" href="page3.html">Media</a>
+                <a class="dropdown-item" href="/media">Music</a>
               </div>
           </li>
           <li class="nav-item">
