--- a/templates/mainsite/quiz_4.html
+++ b/templates/mainsite/quiz_4.html
@@ -131,10 +131,10 @@
           <b>Unit 4 - General Outdoors and Weather </b>
         </div>
         <div class="progress"> 
-          <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+          <div class="progress-bar progress-bar-striped" style="width: {{ percentage_complete }}%;" aria-valuenow="{{percentage_complete}}" aria-valuemin="0" aria-valuemax="100">{{percentage_complete}}%</div>
         </div>
         {% if not repeated_question %}
-        <b>{{question_id}} of 11</b>
+        <b>{{questions_answered}} of 5</b>
       {% else %}
         <b>Repeated Question</b>
       {% endif %}  
