minor ui changes

--- a/templates/mainsite/lesson.html
+++ b/templates/mainsite/lesson.html
@@ -43,7 +43,7 @@
     <div class="quiz-container">
       <div class="d-flex justify-content-between align-items-center mb-3">
         <div style="width: auto; margin-left:20px; font-size: 18px">
-          <b>Unit {{unit_id}} - {{unit_name}} </b>
+          <b>{{unit_name}} - {{difficulty}} </b>
         </div>
         <div class="progress" style="width: 30%;"> 
           <div class="progress-bar progress-bar-striped" role="progressbar" style="width: {{ percent_complete }}%;" data-toggle="tooltip" data-placement="top" title="For Quiz 2" aria-valuenow="{{percent_complete}}" aria-valuemin="0" aria-valuemax="100">{{percent_complete}}%</div>
