--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -423,3 +423,11 @@ body {
   background-color: rgb(224, 107, 107);
   font-weight: bold;
 }
+
+.question_count_box {
+  background-color:rgb(216, 195, 78);
+  padding: 8px;
+  border-radius: 20px;
+  border: 2px solid black;
+  box-shadow: 0px 0px 10px 0px black;
+}
